# paella

./: .gitignore  README.md  pyproject.toml
notebooks/: training.py  visualizing.py
src/paella/deploy/: serve.py
src/paella/models/: __init__.py  _basic_cnn_block.py  convnext.py  densenet.py  mlp_mixer.py  resnet.py  simplecnn.py  unet.py  visiontransformer.py
src/paella/train/: app.py  data.py  lib.py
src/paella/utils/: __init__.py  config.py  instantiators.py  networks.py  plot_modern.py  stats.py
